<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edge"
    android:orientation="vertical"
    tools:context=".AlarmActivity">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/alarm_title"
        android:contentDescription="@string/StringValue" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edge"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="180dp"
                android:fontFamily="@font/nanumgothicbold"
                android:gravity="center"
                android:text="@string/ai_auto"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edge"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="180dp"
                android:fontFamily="@font/nanumgothicbold"
                android:gravity="center"
                android:text="@string/alarm_set"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="165dp"
                android:fontFamily="@font/nanumgothicbold"
                android:gravity="center"
                android:text="@string/time_set"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="95dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/nanumgothicbold"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="90dp"
                android:fontFamily="@font/nanumgothicbold"
                android:gravity="center"
                android:text="@string/time_set"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Mon"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:gravity="center"
                    android:text="@string/Mon"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/Tue"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:gravity="center"
                    android:text="@string/Tue"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Wed"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:gravity="center"
                    android:text="@string/Wed"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Thu"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:gravity="center"
                    android:text="@string/Thu"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/Fri"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:gravity="center"
                    android:text="@string/Fri"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Sat"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:gravity="center"
                    android:text="@string/Sat"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Sun"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nanumgothicbold"
                    android:gravity="center"
                    android:text="@string/Sun"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="180dp"
                android:fontFamily="@font/nanumgothicbold"
                android:gravity="center"
                android:text="@string/light"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_black"
        android:text="@string/add"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edge"
        android:orientation="vertical">
    </LinearLayout>
</LinearLayout>